<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_test"
        android:orderInCategory="100"
        android:title="@string/action_test"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_resetta"
        android:orderInCategory="100"
        android:title="@string/action_resetta"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cancella_msg_ext"
        android:orderInCategory="100"
        android:title="@string/action_del_ext_msg"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_esci"
        android:orderInCategory="100"
        android:title="@string/action_esci"
        app:showAsAction="never" />
</menu>
